nextcloud/nextcloud.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: nextcloud
  name: nextcloud-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
  - hosts:
    - home.name
    secretName: nextcloud-prod-tls
  rules:
  - host: home.name
    http:
      paths:
        - path: /
          backend:
            serviceName: nextcloud
            servicePort: 8080
